--- a/resources/shipstyle.css
+++ b/resources/shipstyle.css
@@ -1,5 +1,5 @@
-
-main{
+/*
+.main-cont,main{
     width: 80%;
     font-family:'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: auto;
@@ -7,6 +7,9 @@ main{
     padding:0px;
     font-weight:400;border-radius:10px;
 
+}
+body{
+    background-color:  rgba(204, 231, 231, 0.377);;
 }
 input{
     margin-top: 10px;
@@ -33,7 +36,8 @@ select option{
     height: 150px;
     padding-left:30px;
     border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.35);
+    background-color: rgba(157, 191, 241, 0.35);
+    box-shadow: rgb(196, 196, 196) 3px 3px 3px 3px;
     padding-top:5px;
     padding-bottom: 150px;
     margin-top:45px;
@@ -61,7 +65,142 @@ h4{
 .subbtn{
     height:35px;
     width:150px;
-    border-radius:8px;
+    border-radius:5px;
     margin-top: 50px;
     font-size: 20px;
+    background-color: rgba(85, 85, 85, 0.404);
+    color: white;
+}*/
+
+
+
+
+
+.row{
+    display:flex;
+    flex-direction: column;
+}
+main{
+    box-sizing: border-box;
+}
+.col-50 {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 50%;
+    
+}
+.shipping, .container{
+    margin: 0px 10%;
+    padding: 0px 10%;
+    background-color: /*rgba(157, 196, 241, 0.123);*/#1d2731;
+    color: white;
+    
+    border-radius: 3px;
+    
+}
+.container{
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+    box-shadow: rgb(196, 196, 196) 3px 3px 3px 3px;
+}
+body{
+    background-color:  /*rgba(204, 231, 231, 0.377);*/#15202b;
+    font-family:'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+input[type=text]{
+
+    width: 80%;
+    margin-bottom: 20px;
+    
+    padding: 12px;
+    border: 1px solid rgb(59, 58, 58);
+    border-radius: 3px;
+}
+select{
+
+    width: 82%;
+    margin-bottom: 20px;
+
+    padding: 12px;
+    border: 1px solid rgb(59, 58, 58);
+    border-radius: 3px;
+}
+
+select option{
+    font-size: 23px;
+    font-weight: 300;
+}
+label {
+    margin-bottom: 10px;
+    display: block;
+}
+button{
+    background-color: #04AA6D;
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 150px;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+button:hover {
+    background-color: #45a049;
+}
+h3{
+    font-size: 1.5em;
+    font-weight: 400;
+}
+input[type=radio]{
+    width:20px;
+    height:20px;
+    display:inline;
+}
+.h{
+    display:flex;
+    align-items: center;
+    padding:12px;
+    
+}
+h4{
+    font-size:1.7em;
+    font-weight: 400;
+}
+.gift-c{
+    display:flex;
+    flex-direction: column;
+    padding-top: 10px;
+    
+}
+#gift-c{
+    width:80%;
+}
+.v{
+    display:flex;
+    padding-top: 20px;
+    align-items: center;
+}
+input[type=number]{
+
+    width: 80%;
+    margin-bottom: 20px;
+    padding: 12px;
+    border: 1px solid rgb(59, 58, 58);
+    border-radius: 3px;
+}
+#on-deli{
+    display:flex;
+    align-items: center;
+    padding-bottom:20px;
+    padding-top: 20px;
+}
+.row2{
+    display:flex;
+    justify-content: center;
+}
+.row2 button{
+    width: 300px;
 }
